--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^10.12.2",
     "genkit": "^1.8.0",
+    "html2pdf.js": "^0.10.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
