--- a/C:\Users\Richard_Odoom\Desktop\sjm-school-app\package.json
+++ b/C:\Users\Richard_Odoom\Desktop\sjm-school-app\package.json
@@ -7,7 +7,7 @@
     "node": "20"
   },
   "scripts": {
-    "dev": "next dev --turbopack -p 9003",
+    "dev": "next dev --turbopack",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
