--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
+    "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.2",
     "genkit": "^1.8.0",
     "html2pdf.js": "^0.10.1",
