--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.2",
+    "framer-motion": "^11.2.10",
     "genkit": "^1.8.0",
     "html2pdf.js": "^0.10.1",
     "lucide-react": "^0.475.0",
