--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "framer-motion": "^11.2.10",
     "genkit": "^1.8.0",
     "html2pdf.js": "^0.10.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
@@ -60,6 +61,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^4.2.1",
     "react-paystack": "^6.0.0",
     "recharts": "^2.15.1",
     "resend": "^3.2.0",
@@ -69,6 +71,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
