The `npm install` command failed in my project. Analyze the following er

--- a/src/package.json
+++ b/src/package.json
@@ -53,7 +53,6 @@
     "framer-motion": "^11.2.10",
     "genkit": "^1.8.0",
     "html2pdf.js": "^0.10.1",
-    "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -65,6 +64,7 @@
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
     "react-paystack": "^6.0.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "recharts": "^2.15.1",
     "resend": "^3.2.0",
     "tailwind-merge": "^3.0.1",
