--- a/src/package.json
+++ b/src/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -9,7 +10,7 @@
     "dev": "next dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
+    "build": "npx next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -41,8 +42,6 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.43.5",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,6 +52,7 @@
     "framer-motion": "^11.2.10",
     "genkit": "^1.8.0",
     "html2pdf.js": "^0.10.1",
+    "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -64,7 +64,6 @@
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
     "react-paystack": "^6.0.0",
-    "react-qr-reader": "^3.0.0-beta-1",
     "recharts": "^2.15.1",
     "resend": "^3.2.0",
     "tailwind-merge": "^3.0.1",
