--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,21 @@
-
 {
-    "name": "EduSync School Platform",
-    "short_name": "EduSync",
-    "description": "A comprehensive school management platform.",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#2C3E50",
-    "icons": [
-        {
-            "src": "/logo.svg",
-            "sizes": "any",
-            "type": "image/svg+xml"
-        },
-        {
-            "src": "/icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "EduSync - School Management Platform",
+  "short_name": "EduSync",
+  "description": "A comprehensive PWA for managing school operations.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#2C3E50",
+  "icons": [
+    {
+      "src": "/logo.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/logo.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml"
+    }
+  ]
 }
