--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "2.43.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,13 +54,10 @@
     "genkit": "^1.8.0",
     "html2pdf.js": "^0.10.1",
     "html5-qrcode": "^2.3.8",
-    "iron-session": "^8.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
-    "pg": "^8.12.0",
-    "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
