--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -41,8 +40,9 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.4.0",
-    "@supabase/supabase-js": "2.43.4",
+    "@supabase/supabase-js": "^2.43.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.1",
@@ -56,6 +56,7 @@
     "html2pdf.js": "^0.10.1",
     "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
+    "lucide": "^0.540.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
