--- a/package.json
+++ b/package.json
@@ -75,8 +75,9 @@
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
     "react-paystack": "^6.0.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.4",
     "resend": "^3.2.0",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.2.2",
