--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -92,8 +93,8 @@
     "@types/react-dom": "^18",
     "genkit-cli": "^1.8.0",
     "null-loader": "^4.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "turbo": "^2.5.6",
     "typescript": "^5",
     "vitest": "^1.6.1"
